[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unju"
version = "0.1.0"
description = "Python SDK for unju.ai — AI agent platform with memory, realtime, and credits"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "unju.ai", email = "dev@unju.ai" },
]
keywords = ["ai", "agents", "memory", "realtime", "defi", "livekit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
async = ["httpx[http2]>=0.25.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[project.urls]
Homepage = "https://unju.ai"
Documentation = "https://docs.unju.ai/sdk/python"
Repository = "https://github.com/unju-ai/unju-python"
Issues = "https://github.com/unju-ai/unju-python/issues"
Changelog = "https://github.com/unju-ai/unju-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["unju"]
